<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="vertical"
        tools:context="com.bskup.spacequiz.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/space_bg"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logo_border"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="4dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/logo_space"
                    android:textColor="@color/main_bg"
                    android:textSize="26sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/logo_quiz"
                    android:textColor="@color/main_bg"
                    android:textSize="26sp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question_header"
                style="@style/HeaderTextStyle"
                android:text="@string/question_header_10"/>

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/correct"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:text="@string/results_button"
                android:onClick="showSummary"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
